tests/sksl/errors/golden/GrNoFragmentProcessorReturn.cpp
### Compilation failed:

error: 3: functions may not return type 'fragmentProcessor'
error: 6: unknown identifier 'get_child'
2 errors
